@@ -4,6 +4,8 @@ Changes in 0.62.3:
     a trove isn't installed but a suitable replacement (meaning on the same
     branch) is available
   * Installing changesets w/ not by default from files broke
+  * Fix a bug in the kid template that prevented permissions (ACLs) from being
+    deleted from a repository.
 
 Changes in 0.62.2:
   * Further reworkings of update code to be fully based on job sets. The
